src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Id__c</fullName>
        <label>Account Manager Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Customer status.</description>
        <label>Account Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspended</fullName>
                    <label>Access Suspended</label>
                </value>
                <value>
                    <fullName>ActiveGrace</fullName>
                    <label>Active Grace</label>
                </value>
                <value>
                    <fullName>ActivePaid</fullName>
                    <label>Active Paid</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>ContractEnded</fullName>
                    <label>Contract Ended</label>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>SubscriptionPending</fullName>
                    <label>Subscription Pending</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Account Provisioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_status_change_date__c</fullName>
        <label>Account status change date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>All_Email_Preferences__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opt-in flag for marketing emails. Default value depends on the country of registration.</description>
        <label>All Email Preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Original_Amount__c - Open_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <label>Bill To Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
        <relationshipName>AccountsBillingContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <description>Email for DAZN venue finder.</description>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Number__c</fullName>
        <description>Phone number for DAZN venue finder.</description>
        <label>Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_name__c</fullName>
        <label>Business name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAF_approved__c</fullName>
        <label>CAF approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Comment__c</fullName>
        <label>Cancel Reason Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BroadbandTooSlow</fullName>
                </value>
                <value>
                    <fullName>Buffering or issues with streaming</fullName>
                    <isActive>false</isActive>
                    <label>Buffering or issues with streaming</label>
                </value>
                <value>
                    <fullName>BusinessClose</fullName>
                </value>
                <value>
                    <fullName>Business Closing/moving to a new owner</fullName>
                    <isActive>false</isActive>
                    <label>Business Closing/moving to a new owner</label>
                </value>
                <value>
                    <fullName>DecideLater</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t like the commentating</fullName>
                    <isActive>false</isActive>
                    <label>Doesn&apos;t like the commentating</label>
                </value>
                <value>
                    <fullName>Doesn&apos;t like the UI</fullName>
                    <isActive>false</isActive>
                    <label>Doesn&apos;t like the UI</label>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                    <isActive>false</isActive>
                    <label>Duplicate Account</label>
                </value>
                <value>
                    <fullName>I did not make any contract with DAZN For Business</fullName>
                </value>
                <value>
                    <fullName>Internet too slow</fullName>
                    <isActive>false</isActive>
                    <label>Internet too slow</label>
                </value>
                <value>
                    <fullName>I want an off-season break</fullName>
                </value>
                <value>
                    <fullName>MissDedicatedSports</fullName>
                </value>
                <value>
                    <fullName>My order never arrived</fullName>
                </value>
                <value>
                    <fullName>NoSportsAnymore</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Playback fails/App Issues</fullName>
                    <isActive>false</isActive>
                    <label>Playback fails/App Issues</label>
                </value>
                <value>
                    <fullName>Poor video/audio/framerate</fullName>
                    <isActive>false</isActive>
                    <label>Poor video/audio/framerate</label>
                </value>
                <value>
                    <fullName>PoorVideoQuality</fullName>
                </value>
                <value>
                    <fullName>Season has finished</fullName>
                    <isActive>false</isActive>
                    <label>Season has finished</label>
                </value>
                <value>
                    <fullName>Sport/event unavailable</fullName>
                    <isActive>false</isActive>
                    <label>Sport/event unavailable</label>
                </value>
                <value>
                    <fullName>Suspicious Account</fullName>
                    <isActive>false</isActive>
                    <label>Suspicious Account</label>
                </value>
                <value>
                    <fullName>TechnicalProblems</fullName>
                </value>
                <value>
                    <fullName>The offer does not include the sports I need</fullName>
                </value>
                <value>
                    <fullName>TooExpensive</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                    <isActive>false</isActive>
                    <label>Too Expensive</label>
                </value>
                <value>
                    <fullName>Unable to login</fullName>
                    <isActive>false</isActive>
                    <label>Unable to login</label>
                </value>
                <value>
                    <fullName>ViaSatellite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Status__c</fullName>
        <label>Cancel Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft</fullName>
                    <label>Soft cancelled</label>
                </value>
                <value>
                    <fullName>Hard</fullName>
                    <label>Hard cancelled</label>
                </value>
                <value>
                    <fullName>Undo</fullName>
                    <label>Undo Cancel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Digest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Digest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Link__c</fullName>
        <label>Contract Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contract_signed__c</fullName>
        <label>Contract signed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_invoice_to_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy invoice to AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Grade_Sub_Type__c</fullName>
        <description>Cross-Grade subscription term type</description>
        <label>Cross-Grade Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Customer identifier generated by Data Access service during SignUp.

Format: UUID (GUID).
Example: eb32e69e28984400b31d5a2abd075d74</description>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Count__c</fullName>
        <label>Device Count</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Lead_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud Lead Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GuaranteedPrice__c</fullName>
        <description>The price that is agreed for the frozen period</description>
        <label>Guaranteed Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Cancel_Reason_Comment__c</fullName>
        <label>Hard Cancel Reason Comment</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Cancel_Reason__c</fullName>
        <label>Hard Cancel Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor video/audio</fullName>
                </value>
                <value>
                    <fullName>Buffering or issues with streaming</fullName>
                </value>
                <value>
                    <fullName>Playback fails/App Issues</fullName>
                </value>
                <value>
                    <fullName>Unable to login</fullName>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                </value>
                <value>
                    <fullName>Suspicious Account</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Business Closing/moving to a new owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Country_Code__c</fullName>
        <description>this field contains an ISO 3166-1 alpha-2 code, which is a two-letter country code defined in ISO 3166-1, part of the ISO 3166 standard</description>
        <label>Notification Country Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Email__c</fullName>
        <description>Email address, uniquely identifies a customer.</description>
        <label>Notification Email</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notification_Language_Code__c</fullName>
        <description>This field contains a language tag, adhering the best practices as described in rfc5646</description>
        <label>Notification Language Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <label>Open Amount</label>
        <summarizedField>Customer_Transaction__c.Open_Amount__c</summarizedField>
        <summaryForeignKey>Customer_Transaction__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <summarizedField>Customer_Transaction__c.Original_Amount__c</summarizedField>
        <summaryForeignKey>Customer_Transaction__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>self lookup to link a ThirdParty Account to the DAZNPartner Account.</description>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_System_Id__c</fullName>
        <description>External customer identifier in partner’s system. Only for 3rd party customers.</description>
        <externalId>true</externalId>
        <label>Partner System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Unique_Identifier__c</fullName>
        <description>Unique text to identify a Partner Account (ad example: TIM)</description>
        <externalId>true</externalId>
        <label>Partner Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>Identifier of the partner managing the customer. Only for 3rd party customers.</description>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pause_End_Date__c</fullName>
        <label>Pause End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pause_Start_Date__c</fullName>
        <label>Pause Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspended</fullName>
                    <label>Access Suspended</label>
                </value>
                <value>
                    <fullName>ActiveGrace</fullName>
                    <label>Active Grace</label>
                </value>
                <value>
                    <fullName>ActivePaid</fullName>
                    <label>Active Paid</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>ContractEnded</fullName>
                    <label>Contract Ended</label>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>SubscriptionPending</fullName>
                    <label>Subscription Pending</label>
                </value>
                <value>
                    <fullName>Account Provisioning</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceGuaranteeEndDate__c</fullName>
        <description>The end date of the frozen price period</description>
        <label>Price Guarantee End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceGuarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the prices of the subscription is frozen for a period of time. Period ends at the date set in the  &apos;Price Guarantee End Date&apos; field.</description>
        <label>Price Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Contacts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Occupancy__c</fullName>
        <label>Room Occupancy</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_ID__c</fullName>
        <description>External customer identifier in partner’s system. Only for sales partner customers.</description>
        <label>Sales Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Partner__c</fullName>
        <description>Identifier of the partner managing the customer.</description>
        <label>Sales Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEHOGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sky_Customer_ID__c</fullName>
        <description>Unique customer identifier for SKY customers. This field is used in the &quot;Account Setup Form&quot; for the &quot;Betting&quot; branch direction</description>
        <externalId>true</externalId>
        <label>Sky Customer ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Soft_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>TestAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if this is test record.</description>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trading_Brand_name__c</fullName>
        <label>Company/billing name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undo_soft_cancel_reason__c</fullName>
        <description>Reason why the customer wants to uncancel a soft cancellation</description>
        <label>Undo soft cancel reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer changed mind</fullName>
                </value>
                <value>
                    <fullName>Soft Cancelled in error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undo_soft_cancel_reason_comment__c</fullName>
        <description>Description for un cancelling the soft cancel</description>
        <label>Undo soft cancel reason comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unfinished_Rejoin_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to identify customers that started the rejoin journey, but didn’t finish it. This information can be used to send them alternative offers, to persuade them to rejoin us.</description>
        <label>Unfinished Rejoin Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vat_Id__c</fullName>
        <description>VAT registration number. Can be empty, if business is not VAT registered.</description>
        <label>Vat Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueFinderConsentGranted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Venue Finder Consent Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue_Address_City__c</fullName>
        <label>Venue City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Address_Country__c</fullName>
        <description>this valueset contains ISO 3166-1 alpha-2 codes and country names. An alpha-2 code is an two-letter country code defined in ISO 3166-1, part of the ISO 3166 standard</description>
        <label>Venue Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Name_By_Alpha_2_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue_Address_Post_Code__c</fullName>
        <label>Venue Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Address_State_Province__c</fullName>
        <label>Venue State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Address_Street__c</fullName>
        <label>Venue Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer_Id__c</fullName>
        <description>Additional customer identifier for anti-piracy purposes. It should be shorter yet unique version of the customer identifier.

Format: 12 alphanumeric symbols.
Example: b75d21f0eb91</description>
        <label>Viewer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if welcome email was sent to the primary contact.</description>
        <label>Welcome Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora_Id__c</fullName>
        <description>External customer identifier in Zuora. It will be set customer subscribes and its Zuora account is created.</description>
        <externalId>true</externalId>
        <label>Zuora Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Trading_Brand_name__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Notification_Language_Code__c</columns>
        <columns>Partner__c</columns>
        <columns>Previous_Status__c</columns>
        <columns>Soft_Cancelled__c</columns>
        <columns>Account_Status__c</columns>
        <columns>All_Email_Preferences__c</columns>
        <columns>Business_Type__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>Venue_Address_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Venue_Address_Country__c</field>
            <operation>equals</operation>
            <value>de,at</value>
        </filters>
        <filters>
            <field>Test_Data__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccountsEnterprise</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Notification_Language_Code__c</columns>
        <columns>Partner__c</columns>
        <columns>Previous_Status__c</columns>
        <columns>Soft_Cancelled__c</columns>
        <columns>Account_Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Business_Type__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Data__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Business_Type__c</field>
            <operation>equals</operation>
            <value>Gastronomy</value>
        </filters>
        <filters>
            <field>Partner__c</field>
            <operation>notEqual</operation>
            <value>SKY</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Enterprise_Child,Account.Enterprise_Parent</value>
        </filters>
        <filters>
            <field>Account_Status__c</field>
            <operation>equals</operation>
            <value>ActivePaid</value>
        </filters>
        <label>All Accounts Enterprise</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Sales</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Customer_Id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Trading_Brand_name__c</columns>
        <columns>Business_name__c</columns>
        <columns>Business_Type__c</columns>
        <columns>Venue_Address_Street__c</columns>
        <columns>Venue_Address_Post_Code__c</columns>
        <columns>Venue_Address_City__c</columns>
        <columns>Venue_Address_State_Province__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts Sales</label>
        <sharedTo>
            <group>Sales_DACH_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>DAZN_Partner</fullName>
        <active>true</active>
        <description>DAZN Partner operating withing selling DAZN product to B2B customers, onboarding customers and maintaining business relation. Customer payments for DAZN services are held by DAZN Partner directly</description>
        <label>DAZN Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise_Child</fullName>
        <active>true</active>
        <description>Enterprise Child B2B customer. Happy Hour installed in the Venue. Access to My Account. No direct billing with DAZN. Billing relationship held with Parent.</description>
        <label>Enterprise Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise_Parent</fullName>
        <active>true</active>
        <description>Enterprise Parent B2B Customer. No Venue with Happy Hour installed. No access to My Account. Billing directly with DAZN.</description>
        <label>Enterprise Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Independent_Bank_Transfer</fullName>
        <active>true</active>
        <description>Independent B2B customer paying via bank transfer. Happy Hour installed in the Venue. Access to My Account. Billing directly with DAZN.</description>
        <label>Independent (bank transfer)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Independent_Ecommerce</fullName>
        <active>true</active>
        <description>Independent B2B customer paying via ecommerce. Happy Hour installed in the Venue. Access to My Account. Billing directly with DAZN.</description>
        <label>Independent (ecommerce)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party</fullName>
        <active>true</active>
        <description>B2B customer onboarded by Third Party partner. Happy Hour installed in the Venue. Access to My Account. No direct billing with DAZN. Billing relationship held with Third Party partner.</description>
        <label>Third party</label>
    </recordTypes>
</CustomObject>